--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <p>
           <em>FX eCommerce, e-Trading Technology, and Data Product Management</em><br>
           <em>Director, Ursa Business Intelligence Ltd (company no. 11164511)</em><br>
-          <em>LinkedIn - www.linkedin.com/in/alexander-FX</em><br>
-          <em>R: <a href="https://ursabi.shinyapps.io/Demo_dashboard_1/">A latency dashboard</a></em><br>
+          <em><a href="www.linkedin.com/in/alexander-FX"></a>LinkedIn</em><br>
+          <em>R - <a href="https://ursabi.shinyapps.io/Demo_dashboard_1/">A latency dashboard</a></em><br>
         </p></td>
       </tr>
     </table>
